--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"
     ></script>
-  <title>Gallery - NIAT Freshers 2024</title>
+  <title>NIAT Freshers 2024</title>
   
   
   <!-- Link to External CSS -->
